Change background picture to fit rose

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,14 +47,26 @@
   <div class="slider fullscreen">
     <ul class="slides">
       <li>
-        <img src="/image/dew-bg.jpg">
+        <img src="/image/flower-store-bg.jpg">
         <div class="caption center-align">
-          <h1><br><br><%= instanceId %><br></h1>
-          <a id="crashButton" style="cursor: pointer;">
-            <i class="large material-icons" style="color: white;">
-              help
-            </i>
-          </a>
+          <div class="row">
+            <div class="col s2 m3 l4"></div>
+            <div class="col s8 m6 l4">
+              <div class="card" style="background-color: rgba(0,0,0,0.6)">
+                <div class="card-content white-text">
+                  <span class="card-title">
+                    <h1><%= instanceId %><br></h1>
+                  </span>
+                  <a id="crashButton" style="cursor: pointer;">
+                    <i class="large material-icons" style="color: white;">
+                      local_florist
+                    </i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col s2 m3 l4"></div>
+          </div>
         </div>
       </li>
     </ul>
