change icon for crash button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
                   </span>
                   <a id="crashButton" style="cursor: pointer;">
                     <i class="large material-icons" style="color: white;">
-                      local_florist
+                      filter_vintage
                     </i>
                   </a>
                 </div>
